fixed mode menu alignment and label

--- a/src/www/css/app/mode_menu.less
+++ b/src/www/css/app/mode_menu.less
@@ -40,7 +40,7 @@
       top: 77%;
       right: 0;
       margin-bottom: 23px;
-      margin-right: -35px;
+      margin-right: -28px;
       width: 196px;
       &:after {
         border-left: 7px solid rgba(0, 0, 0, 0);
@@ -62,10 +62,13 @@
     padding-left: 0;
     .label {
       .long-label {
-        display: none;
+        display: inline-block;
       }
       .short-label {
-        display: inline-block;
+        display: none;
+      }
+      .popover {
+        margin-right: -35px;
       }
       &:before {
         right: -24px;
